added front end

--- a/web-server/index.html
+++ b/web-server/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>OAUTH</title>
 </head>
+
 <body>
-  <a href="https://github.com/login/oauth/authorize">Log in with Github</a>
+  <div id="githubAuth">
+
+  </div>
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+  <script>
+    let githubURL = 'https://github.com/login/oauth/authorize';
+
+    let options = {
+      client_id: `${process.env.CLIENT_ID}`,
+      redirect_uri: `http://localhost:${process.env.port}`,
+      scope: ``,
+      state: ``,
+      allow_signup: `true`
+    }
+
+    let QueryString = Object.keys(options).map(key => `${key}=${encodeURIComponent(options[key])}`).join('&');
+    let authURL = `${githubURL}?${QueryString}`;
+
+    $('#githubAuth').append(`<a href="${authURL}">Login with Github</a>`);
+  </script>
 </body>
+
 </html>
