--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -12,20 +12,19 @@
   <div id="githubAuth">
 
   </div>
-  <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
   <script>
     let githubURL = 'https://github.com/login/oauth/authorize';
 
     let options = {
-      client_id: `${process.env.CLIENT_ID}`,
-      redirect_uri: `http://localhost:${process.env.port}`,
+      client_id: `15bcb7c2a5c0c8e61518`,
+      redirect_uri: `http://localhost:3000/oauth`,
       scope: ``,
       state: ``,
       allow_signup: `true`
     }
+
 
     let QueryString = Object.keys(options).map(key => `${key}=${encodeURIComponent(options[key])}`).join('&');
     let authURL = `${githubURL}?${QueryString}`;
