create signup form to save users to mongodb

--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -9,11 +9,26 @@
 </head>
 
 <body>
-  <div id="githubAuth">
+  <main>
+    Access Token: <span id="token"></span>
+    <hr>
+    <h2>Register</h2>
+    <form id="register">
+      <label for="user-name">User Name:</label>
+      <input type="text" name="user-name" autocomplete="off">
+      <label for="password">Password:</label>
+      <input type="password" name="password" autocomplete="off">
+      <input type="submit" value="Create User">
+    </form>
+    <div id="githubAuth">
 
-  </div>
+
+    </div>
+  </main>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/superagent/3.8.3/superagent.min.js"></script>
+
   <script>
     let githubURL = 'https://github.com/login/oauth/authorize';
 
@@ -25,11 +40,26 @@
       allow_signup: `true`
     }
 
-
     let QueryString = Object.keys(options).map(key => `${key}=${encodeURIComponent(options[key])}`).join('&');
     let authURL = `${githubURL}?${QueryString}`;
 
     $('#githubAuth').append(`<a href="${authURL}">Login with Github</a>`);
+
+    //User Registration
+    $('#register').on('submit', function (e) {
+      e.preventDefault();
+      let username = $(this).find('[name=user-name]').val();
+      let password = $(this).find('[name=password]').val();
+      let postData = { username, password }
+
+      superagent.post('http://localhost:3000/register')
+      .send(postData)
+      .then(response => {
+        console.log('this is token:', response.text)
+        $('#token').text(response.text);
+      })
+    });
+
   </script>
 </body>
 
