--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -24,6 +24,7 @@
       <section id="get-player"></section>
 
       <form id="player-headshot" enctype="multipart/form-data">
+        <img src="https://s3-us-west-2.amazonaws.com/alexlab19demo/8c859d494301cc4fe90ea83530e05142.duck.bmp"> 
         <h2>Upload Headshot</h2>
         <label for="title">Title</label>
         <input type="text" name="title">
@@ -244,7 +245,7 @@
           "Authorization": "Bearer " + token,
         },
         success: function(res){
-          console.log('success');
+          console.log(res);
         }
       });
     });
